force-app/main/default/objects/Signing_Attendee__c/Signing_Attendee__c.object-meta.xml
<CustomObject>
    <label>Signing Attendee</label>
    <nameField>
        <label>Signing Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signing Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>