force-app/main/default/objects/Signing_Attendee__c/fields/Deal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Contact</label>
    <referenceTo>Deal_Contact__c</referenceTo>
    <relationshipLabel>Signing Attendees</relationshipLabel>
    <relationshipName>Signing_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>