force-app/main/default/objects/Signing_Attendee__c/fields/Signing_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Signing_Appointment__c</fullName>
    <label>Signing Appointment</label>
    <referenceTo>Signing_Appointment__c</referenceTo>
    <relationshipLabel>Signing Attendees</relationshipLabel>
    <relationshipName>Signing_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>