force-app/main/default/objects/Signing_Attendee__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Deal Contact Id + &apos;-&apos; + Signing Appointment Id</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>